--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "escape-string-regexp": "^1.0.5",
     "fetch-jsonp": "^1.1.3",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
