--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "sw-toolbox": "^3.6.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
