--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "escape-string-regexp": "^1.0.5",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
+    "react-burger-menu": "^2.5.2",
     "react-dom": "^16.4.2",
     "react-google-maps": "^9.4.5",
     "react-scripts": "1.1.4",
