--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://frontcodeme.github.io/map",
   "name": "map",
   "version": "0.1.0",
   "private": true,
@@ -11,13 +12,16 @@
     "react-dom": "^16.4.2",
     "react-google-maps": "^9.4.5",
     "react-scripts": "1.1.4",
-    "sw-precache": "^5.2.1",
-    "sw-toolbox": "^3.6.0"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "scripts": {
     "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
